--- a/index.html
+++ b/index.html
@@ -21,12 +21,76 @@
         <img src="./img/logo-white.png" class="header__logo" alt="logo" />
       </div>
       <div class="header__text-box">
-        <h1 class="heading--primary">
+        <h1 class="heading-primary">
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
         <a href="#" class="btn btn--white btn--animated">Descover our tours</a>
       </div>
     </header>
+
+    <section class="grid-test">
+      <div class="row">
+        <div class="col-1-of-2">
+          col 1 of 2
+        </div>
+        <div class="col-1-of-2">
+          col 1 of 2
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          col 1 of 3
+        </div>
+        <div class="col-1-of-3">
+          col 1 of 3
+        </div>
+        <div class="col-1-of-3">
+          col 1 of 3
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-3">
+          col 1 of 3
+        </div>
+        <div class="col-2-of-3">
+          col 2 of 3
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+        <div class="col-2-of-4">
+          col 2 of 4
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1-of-4">
+          col 1 of 4
+        </div>
+        <div class="col-3-of-4">
+          col 3 of 4
+        </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
