--- a/index.html
+++ b/index.html
@@ -28,7 +28,37 @@
         <a href="#" class="btn btn--white btn--animated">Descover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Your going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto officia dicta blanditiis odio modi, dolores at non deleniti, corrupti voluptatum ullam magnam error necessitatibus eaque ea quas, sunt accusantium distinctio?
+            </p>
 
+            <h3 class="heading-tertiary u-margin-bottom-small">
+                Live adventures like you never have before
+              </h3>
+              <p class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto officia dicta blanditiis odio modi.
+              </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            
+          </div>
+        </div>
+      </section>
+    </main>
+    <!--Grid
     <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">
@@ -92,5 +122,6 @@
         </div>
       </div>
     </section>
+    -->
   </body>
 </html>
