working on booking section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,206 @@
           </div>
         </div>
       </section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="cards">
+              <div class="cards__side cards__side--front cards__side--front-1">
+                <div class="cards__picture cards__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="cards__heading">
+                  <span class="cards__heading-span cards__heading-span--1"
+                    >the sea explorer</span
+                  >
+                </h4>
+                <div class="cards__details">
+                  <ul>
+                    <li>3 da7 tour</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guids</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Dificulty: easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="cards__side cards__side--back cards__side--back-1">
+                <div class="cards__cta">
+                  <div class="cards__price-box">
+                    <p class="cards__price-only">Only</p>
+                    <p class="cards__price-value">$297</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="cards">
+              <div class="cards__side cards__side--front cards__side--front-2">
+                <div class="cards__picture cards__picture--2">
+                  &nbsp;
+                </div>
+                <h4 class="cards__heading">
+                  <span class="cards__heading-span cards__heading-span--2"
+                    >the forest hiker</span
+                  >
+                </h4>
+                <div class="cards__details">
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tour guids</li>
+                    <li>Sleep in cozy privet tents</li>
+                    <li>Dificulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="cards__side cards__side--back cards__side--back-2">
+                <div class="cards__cta">
+                  <div class="cards__price-box">
+                    <p class="cards__price-only">Only</p>
+                    <p class="cards__price-value">$497</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="cards">
+              <div class="cards__side cards__side--front cards__side--front-3">
+                <div class="cards__picture cards__picture--3">
+                  &nbsp;
+                </div>
+                <h4 class="cards__heading">
+                  <span class="cards__heading-span cards__heading-span--3"
+                    >the the snow adventurer</span
+                  >
+                </h4>
+                <div class="cards__details">
+                  <ul>
+                    <li>5 day tour</li>
+                    <li>Up to 15 people</li>
+                    <li>3 tour guids</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Dificulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="cards__side cards__side--back cards__side--back-3">
+                <div class="cards__cta">
+                  <div class="cards__price-box">
+                    <p class="cards__price-only">Only</p>
+                    <p class="cards__price-value">$897</p>
+                  </div>
+                  <a href="" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="" class="btn btn--green">Discover all tours</a>
+        </div>
+      </section>
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            your browser is not supported!
+          </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary u-margin-bottom-huge">
+            We make people genualy happy
+          </h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__image"
+              />
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best weekend ever with my family
+              </h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
+                culpa maxime nemo! Aut iusto nesciunt ipsum iure, harum
+                laboriosam non, ipsam adipisci id blanditiis quos quis illo, quo
+                ducimus nam! Lorem ipsum dolor sit amet. elit. o!Aut iusto
+                nesciunt ipsum iure Aut iusto nesciunt ipsum iure
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__image"
+              />
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! my life is completely different now
+              </h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
+                culpa maxime nemo! Aut iusto nesciunt ipsum iure, harum
+                laboriosam non, ipsam adipisci id blanditiis quos quis illo, quo
+                ducimus nam! Lorem ipsum dolor sit amet. elit. o!Aut iusto
+                nesciunt ipsum iure Aut iusto nesciunt ipsum iure
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                  <div class="u-margin-bottom-medium">
+                      <h2 class="heading-secondary">
+                        Start booking now
+                      </h2>
+                    </div>
+                <div class="form__group">
+                    <input type ="text" class="form__input" placeholder="Full Name" id="name" required></input>
+                    <label for="name" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                    <input type ="email" class="form__input" placeholder="Email address" id="email" required></input>
+                    <label for="email" class="form__label">Email Address</label>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!--Grid
     <section class="grid-test">
